Nick changing method used to get page to align thereby fixing teh carousel

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_sidebar.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_sidebar.scss
@@ -178,18 +178,3 @@
         }
     }
 }
-
-@media #{$desktop} {
-    .table {
-        display:table;
-    }
-
-    .table-cell {
-        display:table-cell;
-
-        &.grid-70, &.grid-30 {
-            float:none;
-        }
-
-    }
-}
